--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -53,8 +53,8 @@
 
                 <ImageView
                     android:id="@+id/add_product"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="28dp"
+                    android:layout_height="28dp"
                     android:layout_alignParentEnd="true"
                     android:src="@drawable/ic_add_btn"
                     app:tint="@color/main_text_color" />
@@ -63,6 +63,7 @@
             </RelativeLayout>
 
             <HorizontalScrollView
+                android:layout_marginTop="3dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:scrollbars="none">
@@ -77,8 +78,8 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="vertical"
-                        android:gravity="center_vertical">
+                        android:gravity="center_vertical"
+                        android:orientation="vertical">
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -89,8 +90,8 @@
                             <TextView
                                 android:layout_width="45dp"
                                 android:layout_height="wrap_content"
-                                android:gravity="right|center_vertical"
                                 android:ellipsize="end"
+                                android:gravity="right|center_vertical"
                                 android:maxLines="1"
                                 android:padding="5dp"
                                 android:text="№"
@@ -120,8 +121,8 @@
                             <TextView
                                 android:layout_width="90dp"
                                 android:layout_height="wrap_content"
-                                android:gravity="right|center_vertical"
                                 android:ellipsize="end"
+                                android:gravity="right|center_vertical"
                                 android:maxLines="1"
                                 android:padding="5dp"
                                 android:text="Min price"
@@ -131,8 +132,8 @@
                             <TextView
                                 android:layout_width="70dp"
                                 android:layout_height="wrap_content"
-                               android:gravity="center"
                                 android:ellipsize="end"
+                                android:gravity="center"
                                 android:maxLines="1"
                                 android:padding="5dp"
                                 android:text="Quantity"
@@ -142,8 +143,8 @@
                             <TextView
                                 android:layout_width="50dp"
                                 android:layout_height="wrap_content"
-                               android:gravity="center"
                                 android:ellipsize="end"
+                                android:gravity="center"
                                 android:maxLines="1"
                                 android:padding="5dp"
                                 android:text="In. %"
@@ -164,8 +165,8 @@
                             <TextView
                                 android:layout_width="70dp"
                                 android:layout_height="wrap_content"
-                                android:gravity="center"
                                 android:ellipsize="end"
+                                android:gravity="center"
                                 android:maxLines="1"
                                 android:padding="5dp"
                                 android:text="G. q"
@@ -175,8 +176,8 @@
                             <TextView
                                 android:layout_width="50dp"
                                 android:layout_height="wrap_content"
-                             android:gravity="center"
                                 android:ellipsize="end"
+                                android:gravity="center"
                                 android:maxLines="1"
                                 android:padding="5dp"
                                 android:text="G. %"
@@ -186,8 +187,8 @@
                             <TextView
                                 android:layout_width="90dp"
                                 android:layout_height="wrap_content"
-                                android:gravity="right|center_vertical"
                                 android:ellipsize="end"
+                                android:gravity="right|center_vertical"
                                 android:maxLines="1"
                                 android:padding="5dp"
                                 android:text="G price"
@@ -195,18 +196,17 @@
                                 android:textStyle="bold" />
 
                             <LinearLayout
-                                android:layout_width="32dp"
+                                android:layout_width="40dp"
                                 android:layout_height="wrap_content" />
 
                             <CheckBox
-                                android:layout_width="30sp"
-                                android:layout_height="30sp"
+                                android:layout_width="30dp"
+                                android:layout_height="30dp"
                                 android:layout_gravity="center"
                                 android:layout_marginLeft="8dp"
                                 android:buttonTint="@color/main_text_color"
                                 android:gravity="center"
-                                android:padding="0dp"
-                                android:visibility="gone" />
+                                android:padding="0dp" />
 
                         </LinearLayout>
 
