--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -195,9 +195,14 @@
                                 android:textColor="@color/main_text_color"
                                 android:textStyle="bold" />
 
-                            <LinearLayout
-                                android:layout_width="40dp"
-                                android:layout_height="wrap_content" />
+                            <ImageView
+                                android:id="@+id/calculate"
+                                android:layout_width="24dp"
+                                android:layout_height="24dp"
+                                android:layout_gravity="center"
+                                android:layout_marginStart="16dp"
+                                android:src="@drawable/ic_calculate"
+                                app:tint="@color/main_text_color" />
 
                             <CheckBox
                                 android:layout_width="30dp"
