--- a/app/src/main/res/layout/item_rv_table.xml
+++ b/app/src/main/res/layout/item_rv_table.xml
@@ -9,8 +9,8 @@
         android:id="@+id/id"
         android:layout_width="45dp"
         android:layout_height="wrap_content"
-        android:gravity="right|center_vertical"
         android:ellipsize="end"
+        android:gravity="right|center_vertical"
         android:maxLines="1"
         android:padding="5dp"
         android:textColor="@color/main_text_color"
@@ -31,8 +31,8 @@
         android:id="@+id/total_price"
         android:layout_width="90dp"
         android:layout_height="wrap_content"
-        android:gravity="right|center_vertical"
         android:ellipsize="end"
+        android:gravity="right|center_vertical"
         android:maxLines="1"
         android:padding="5dp"
         android:textColor="@color/main_text_color"
@@ -42,8 +42,8 @@
         android:id="@+id/min_price"
         android:layout_width="90dp"
         android:layout_height="wrap_content"
-        android:gravity="right|center_vertical"
         android:ellipsize="end"
+        android:gravity="right|center_vertical"
         android:maxLines="1"
         android:padding="5dp"
         android:textColor="@color/red_color"
@@ -53,8 +53,8 @@
         android:id="@+id/quantity"
         android:layout_width="70dp"
         android:layout_height="wrap_content"
-        android:gravity="center"
         android:ellipsize="end"
+        android:gravity="center"
         android:maxLines="1"
         android:padding="5dp"
         android:textColor="@color/main_text_color"
@@ -64,8 +64,8 @@
         android:id="@+id/interest_percent"
         android:layout_width="50dp"
         android:layout_height="wrap_content"
-        android:gravity="center"
         android:ellipsize="end"
+        android:gravity="center"
         android:maxLines="1"
         android:padding="5dp"
         android:textColor="@color/main_text_color"
@@ -86,8 +86,8 @@
         android:id="@+id/gift_quantity"
         android:layout_width="70dp"
         android:layout_height="wrap_content"
-       android:gravity="center"
         android:ellipsize="end"
+        android:gravity="center"
         android:maxLines="1"
         android:padding="5dp"
         android:textColor="@color/main_text_color"
@@ -97,8 +97,8 @@
         android:id="@+id/gift_percent"
         android:layout_width="50dp"
         android:layout_height="wrap_content"
-     android:gravity="center"
         android:ellipsize="end"
+        android:gravity="center"
         android:maxLines="1"
         android:padding="5dp"
         android:textColor="@color/main_text_color"
@@ -108,8 +108,8 @@
         android:id="@+id/gift_price"
         android:layout_width="90dp"
         android:layout_height="wrap_content"
-        android:gravity="right|center_vertical"
         android:ellipsize="end"
+        android:gravity="right|center_vertical"
         android:maxLines="1"
         android:padding="5dp"
         android:textColor="@color/main_text_color"
@@ -120,15 +120,16 @@
         android:layout_width="24dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
         android:src="@drawable/ic_edit_pencil"
         app:tint="@color/main_text_color" />
 
     <CheckBox
+        android:id="@+id/checkbox"
         android:layout_width="30sp"
         android:layout_height="30sp"
         android:layout_gravity="center"
-        android:layout_marginLeft="8dp"
+        android:layout_marginStart="8dp"
         android:buttonTint="@color/main_text_color"
         android:gravity="center"
         android:padding="0dp" />
