--- a/app/src/main/res/layout/item_rv_calculate.xml
+++ b/app/src/main/res/layout/item_rv_calculate.xml
@@ -1,6 +1,139 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:orientation="horizontal">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+        android:id="@+id/id"
+        android:layout_width="45dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:ellipsize="end"
+        android:gravity="right|center_vertical"
+        android:maxLines="1"
+        android:padding="5dp"
+        android:text="№"
+        android:textColor="@color/main_text_color"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/name"
+        android:layout_width="120dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:ellipsize="end"
+        android:gravity="left|center_vertical"
+        android:maxLines="1"
+        android:padding="5dp"
+        android:text="Name"
+        android:textColor="@color/main_text_color"
+        android:textStyle="bold" />
+
+    <it.sephiroth.android.library.numberpicker.NumberPicker
+        android:id="@+id/count"
+        android:layout_width="100dp"
+        android:layout_height="27dp"
+        android:layout_margin="5dp"
+        android:orientation="horizontal"
+        android:progress="1"
+        app:picker_max="1000"
+        app:picker_min="0"
+        app:picker_stepSize="1"
+        app:picker_tracker="linear" />
+
+    <EditText
+        android:id="@+id/tv_bought_price"
+        android:layout_width="100dp"
+        android:layout_height="27dp"
+        android:layout_gravity="center_vertical"
+        android:background="@drawable/style_null"
+        android:digits="0123456789"
+        android:gravity="right|center_vertical"
+        android:inputType="numberDecimal"
+        android:maxLines="1"
+        android:padding="5dp"
+        android:text="1 500 000"
+        android:textColor="@color/main_text_color"
+        android:textSize="14dp"
+        android:textStyle="bold" />
+
+    <EditText
+        android:id="@+id/tv_tax_price"
+        android:layout_width="90dp"
+        android:layout_height="27dp"
+        android:layout_gravity="center_vertical"
+        android:background="@drawable/style_null"
+        android:digits="0123456789"
+        android:gravity="right|center_vertical"
+        android:inputType="numberDecimal"
+        android:maxLines="1"
+        android:padding="5dp"
+        android:text="150 000"
+        android:textColor="@color/main_text_color"
+        android:textSize="14dp"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/tv_min_price"
+        android:layout_width="90dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:background="@drawable/style_null"
+        android:digits="0123456789"
+        android:ellipsize="end"
+        android:gravity="right|center_vertical"
+        android:maxLines="1"
+        android:padding="5dp"
+        android:text="150 000"
+        android:textColor="@color/main_text_color"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/tv_old_price"
+        android:layout_width="90dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:background="@drawable/style_null"
+        android:digits="0123456789"
+        android:ellipsize="end"
+        android:gravity="right|center_vertical"
+        android:maxLines="1"
+        android:padding="5dp"
+        android:text="150 000"
+        android:textColor="@color/main_text_color"
+        android:textStyle="bold" />
+
+    <EditText
+        android:id="@+id/tv_total_price"
+        android:layout_width="90dp"
+        android:layout_height="27dp"
+        android:layout_gravity="center_vertical"
+        android:background="@drawable/style_null"
+        android:digits="0123456789"
+        android:gravity="right|center_vertical"
+        android:inputType="numberDecimal"
+        android:maxLines="1"
+        android:padding="5dp"
+        android:text="150 000"
+        android:textColor="@color/main_text_color"
+        android:textSize="14dp"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/tv_benefit"
+        android:layout_width="90dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:background="@drawable/style_null"
+        android:digits="0123456789"
+        android:ellipsize="end"
+        android:gravity="right|center_vertical"
+        android:inputType="numberDecimal"
+        android:maxLines="1"
+        android:padding="5dp"
+        android:text="150 000"
+        android:textColor="@color/main_text_color"
+        android:textStyle="bold" />
+</LinearLayout>
